# option_trading

./: .dockerignore  .env.compose.example  .gitattributes  .gitignore  .tmp_runs_check.js  AGENTS.md  ARCHITECTURE.md  GCP_VELOCITY_COMMANDS.md  GENAI_AGENT_DATA_REFERENCE.md  MODE_SYSTEM.md  PROCESS_TOPOLOGY.md  README.md  RUN_MODES_GUIDE.md  VELOCITY_DEPLOYMENT_GUIDE.md  VELOCITY_QUICK_REFERENCE.txt  bypass_stage2_launch_info.json  deploy_velocity_policies_gcp.sh  docker-compose.gcp.yml  docker-compose.yml  expiry_s2_midday_summary_extract.json  golden_master_v1_v2.py  jira_issue.md  launch_bypass_stage2_test.py  monitor_vm_run.py  ops_check.py  ops_sim_today.py  probe_chain.py  probe_dhan_history.py  progress.txt  quick_deploy_gcp.ps1  quick_deploy_gcp.sh  redis_key_manager.py  requirements-test.txt  run_bypass_stage2.sh  run_bypass_tmux.sh  run_bypass_tmux_v2.sh  run_bypass_tmux_v3.sh  start_apps.py  stop_apps.py  strategy_briefing.docx  (+5 more)
contracts_app/: README.md  __init__.py  config.py  decision_events.py  event_bus.py  events.py  instruments.py  logging_utils.py  market_session.py  options_math.py  parity_mode.py  process_control.py  process_inspect.py  pyproject.toml  redis_keys.py  regime_thresholds.py  sim_manifest.py  sim_namespace.py  strategy_decision_contract.py  time_utils.py  topics.py
ml_pipeline_2/: README.md  __init__.py  architecture.md  pyproject.toml
ml_pipeline_2/docs/: JIRA_BYPASS_STAGE2_RECIPE_MODEL_ANALYSIS.md  JIRA_STAGED_RECIPE_RISK_BASIS_FIX.md  MODEL_STATE_20260426.md  PROPER_TRAINING_STRATEGY_V1.md  README.md  RECOVERY_BASELINE_20260422.md  SCENARIO_TESTING_TOOLS.md  STAGE3_RECIPE_INVESTIGATION.md  STAGE3_TRADE_LOSS_ANALYSIS.md  architecture.md  detailed_design.md  execution_architecture.md  gcp_user_guide.md  intraday_profit_execution_plan.md  midday_recovery_handover.md  research_recovery_runbook.md  stage12_confidence_execution.md  stage12_confidence_execution_policy.md  stage12_counterfactual.md  stage2_feature_signal_memo_template.md  stage2_midday_direction_or_no_trade.md  stage2_midday_grid.md  stage2_midday_high_conviction.md  stage2_midday_redesign.md  stage2_midday_target_redesign.md  stage2_recovery_review.md  stage2_scenario_grid.md  stage3_midday_policy_paths.md  ubuntu_gcp_runbook.md
ml_pipeline_2/scripts/: _analysis.js  _schema.js  (+48 more)
(+1869 files in other folders)
