[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contracts-app"
version = "0.1.0"
description = "Shared contracts, thresholds, and utilities for option-trading systems"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = [".."]
include = ["contracts_app*"]
